# discord_local_llm_bot

./: .env.template  LICENSE  README.md  bot.py  pyproject.toml
